Fix text wrap for titles and medium text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ a:visited {
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
+    margin-right: calc(2vw + 1rem);
 }
 
 .--title-small {
@@ -125,6 +126,14 @@ a:visited {
     line-height: 1.2;
 }
 
+.grid-text h3,
+.content-text-wrapper h3 {
+    white-space: break-spaces;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
 .grid-text p,
 .content-text-wrapper p,
 .--txt-small {
@@ -132,6 +141,9 @@ a:visited {
     font-weight: 400;
     font-size: var(--txt-small);
     line-height: 1.3;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
 
 .--txt-ui,
@@ -258,7 +270,7 @@ figcaption {
     /* -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto; */
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .menu-link:last-child {
@@ -1045,6 +1057,10 @@ input.seek-slider::-webkit-slider-thumb {
         --marg-m: 2rem;
     }
 
+    .--title-large {
+        margin-right: 0;
+    }
+
     .cursor {
         visibility: hidden;
     }
@@ -1153,6 +1169,10 @@ input.seek-slider::-webkit-slider-thumb {
     .main {
         padding-left: 0;
         margin-bottom: var(--sidenav);
+    }
+
+    .card {
+        min-height: var(--main-width);
     }
 
     .card-front a.card-wrapper p {
